footer + x scrollbar fix

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,9 +1,10 @@
 @import "../../styles.scss";
 
-footer{
+footer {
     @include dFlex($jc: space-between);
     background-color: $middleBlue;
     padding: 20px 60px;
+    //width: 100vw;
 }
 
 .logo {
@@ -12,12 +13,26 @@ footer{
     cursor: pointer;
 }
 
-.icon-div{
+.imprint {
+    @include dFlex($fd: column, $gap: 15px);
+
+    a {
+        color: white;
+        text-decoration: none;
+
+        &:hover {
+            scale: 1.1;
+        }
+    }
+}
+
+.socials {
     @include dFlex($gap: 15px);
+
     img {
         width: 32px;
-        
-        &:hover{
+
+        &:hover {
             scale: 1.1;
             cursor: pointer;
         }
