--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,16 +1,18 @@
 @import "../../styles.scss";
 
-section {
-    position: relative;
-    width: 100vw;
-    position: fixed;
-}
+// section {
+//     position: relative;
+//     width: 100vw;
+//     position: fixed;
+// }
 
 header {
     @include dFlex($jc: space-between);
     padding: 20px 60px;
     background-color: white;
-    width: 100%;
+    border-bottom: 1px solid $lightBlue;
+    width: 100vw;
+    position: fixed;
 }
 
 .logo {
@@ -131,6 +133,7 @@ nav div a:hover:after {
     background-color: white;
     width: 100vw;
     border-top: 1px solid $lightBlue;
+    border-bottom: 1px solid $lightBlue;
     padding: 20px 10px;
 
     ul {
