--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,20 +1,30 @@
 @import "../../styles.scss";
 
+.content{
+    @include dFlex($fd: column,$ai: initial);
+}
+
 .hero {
-    width: 100vw;
+    //@include dFlex();
+    width: 100%;
     height: 400px;
     aspect-ratio: 16 / 9;
+    //overflow-x: hidden;
 
     img {
         width: 100%;
         height: 100%;
         object-fit: cover;
+       // overflow-x: hidden;
     }
 }
 
 section {
-    @include dFlex($ai: initial,$jc: initial, $gap: 30px);
+    @include dFlex($ai: center,$jc: flex-start, $gap: 30px);
+    //display: flex;
+    gap: 30px;
     flex-wrap: wrap;
-    width: 100vw;
+    max-width: 100%;
     padding: 50px;
+    overflow-x: hidden;
 }
